--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
+    "@formspark/use-formspark": "^0.1.39",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "email-validator": "^2.0.4",
     "next": "^13.3.1",
     "next-themes": "^0.2.1",
     "react": "^18",
